--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,6 +1,6 @@
 <h1>Log In</h1>
 
-<form method="POST" action ="/users">
+<form method="POST" action ="/users/login">
     <p>
         <label for="username">Username:</label>
         <input type="text" name="username" id="username">
