--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -14,7 +14,7 @@
         <input type="number" name="distance" id="distance" value="0.00"> Miles
     </p>
     <p>
-        <label for="password">Pace:</label>
+        <label for="pace">Pace:</label>
         <select id="pace" name="pace">
             <option value="Run">Run</option>
             <option value="Jog">Jog</option>
