Fixed Duration Input Attrs

--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -13,8 +13,8 @@
         <input type="text" name="year" id="year" value="<%= Date.today.strftime('%Y') %>" size="4" maxlength="4">
     </p>
     <p>
-        <label for="email">Duration:</label>
-        <input type="text" name="email" id="email"> Minutes
+        <label for="duration">Duration:</label>
+        <input type="text" name="duration" id="duration" value="10"> Minutes
     </p>
     <p>
         <label for="distance">Distance:</label>
