Added Missing 'value=' Attr In Duration Input

--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -15,7 +15,7 @@
     </p>
     <p>
         <label for="email">Duration:</label>
-        <input type="text" name="email" id="email" <%= @run.duration %>> Minutes
+        <input type="text" name="email" id="email" value="<%= @run.duration %>"> Minutes
     </p>
     <p>
         <label for="distance">Distance:</label>
