Changed Distance Input Type

--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -19,7 +19,7 @@
     </p>
     <p>
         <label for="distance">Distance:</label>
-        <input type="number" name="distance" id="distance" value="<%= @run.distance %>"> Miles
+        <input type="text" name="distance" id="distance" value="<%= @run.distance %>"> Miles
     </p>
     <p>
         <label for="pace">Pace:</label>
