Fixed Duration Input Attrs

--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -14,8 +14,8 @@
         <input type="text" name="year" id="year" value="<%= Time.at(@run.date).strftime('%Y') %>" size="4" maxlength="4">
     </p>
     <p>
-        <label for="email">Duration:</label>
-        <input type="text" name="email" id="email" value="<%= @run.duration %>"> Minutes
+        <label for="duration">Duration:</label>
+        <input type="text" name="duration" id="duration" value="<%= @run.duration %>"> Minutes
     </p>
     <p>
         <label for="distance">Distance:</label>
