--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,7 +1,16 @@
 <h1>Run Stats</h1>
 
+<p>
 <%= Time.at(@run.date).strftime('%m/%d/%Y') %><br><br>
 Distance: <%= @run.distance %> Miles<br>
 Time: <%= @run.duration%> Minutes<br>
-Pace: <%= @run.pace %> 
+Pace: <%= @run.pace %>
+</p>
+
+<a href="/runs/<%= @run.id %>/edit"><button>Edit</button></a>
+
+<form action="/runs/<%= @run.id %>/delete" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete">
+</form>
 
