--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -4,7 +4,9 @@
 <%= Time.at(@run.date).strftime('%m/%d/%Y') %><br><br>
 Distance: <%= @run.distance %> Miles<br>
 Time: <%= @run.duration%> Minutes<br>
-Pace: <%= @run.pace %>
+Pace: <%= @run.pace %><br><br>
+
+Your average speed was <%=@run.avg_speed%> MPH.
 </p>
 
 <a href="/runs/<%= @run.id %>/edit"><button>Edit</button></a>
