Added Navbar and Navbar Links

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,8 +8,34 @@
   </head>
   <body>
     <div class="container">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">RunLogger</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="nav navbar-nav ml-auto">
+            <% if !logged_in?%>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/login">Log In</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/new">Sign Up</a>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <a class="nav-link" href="/runs">Logged Runs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/runs/new">Add New Run</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/logout">Log Out</a>
+              </li>
+            <% end %>
+          </ul>
+      </div>
         </nav>
         <%= yield %>
 
