--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -43,7 +43,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="container" id="main-content">
+          <div class="container rounded" id="main-content">
             <%= yield %>
           </div>
         </div>
