--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -554,6 +554,12 @@ pre code {
   margin-left: auto;
 }
 
+#main-content {
+  background-color: #ffffff;
+  margin-top: 20px;
+  padding: 10px;
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -10226,4 +10232,6 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+
 /*# sourceMappingURL=bootstrap.css.map */
