Added Opacity To Background in #main-content

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -555,7 +555,7 @@ pre code {
 }
 
 #main-content {
-  background-color: #ffffff;
+  background-color: #ffffffa6;
   margin-top: 20px;
   padding: 10px;
 }
