--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -74,7 +74,7 @@
         </select>
     </div>
     <div class="form-group">
-        <input type="submit" class="form-control" value="Add">
+        <input type="submit" class="btn btn-success" value="Add">
     </div>
 </form>
 </div>
