--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -74,6 +74,7 @@
         </select>
     </div>
     <div class="form-group">
+        <a href="/runs" class="btn btn-danger">Cancel</a>
         <input type="submit" class="btn btn-success" value="Add">
     </div>
 </form>
