--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,25 @@
-<h1>Insert the form to create a new instance of your model.</h1>
-
-<form method="POST" action ="/users">
-    <p>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username">
-    </p>
-    <p>
-        <label for="email">Email:</label>
-        <input type="text" name="email" id="email">
-    </p>
-    <p>
-        <label for="password">Password:</label>
-        <input type="text" name="password" id="password">
-    </p>
-    <input type="submit" value="Sign Up">
-</form>
+<div class="card mx-auto text-center bg-dark text-white" style="max-width: 21rem;">
+    <div class="card-header">
+        Sign Up
+    </div>
+    <div class="card-body">
+        <form method="POST" action ="/users">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control text-center" name="username" id="username">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" class="form-control text-center" name="email" id="email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control text-center" name="password" id="password">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-success" value="Sign Up">
+            </div>
+            <small>Already have an account? <a href="/users/login">Log In</a></small>
+        </form>
+    </div>
+</div>
