Added Correct Methods for Average Times

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -43,15 +43,15 @@
                             <small>1600m<br>(1 Mile)</small>     
                         </div>
                         <div class="col">
-                            <strong><%= @run.mile_time %></strong><br>
+                            <strong><%= @run.fivek_time %></strong><br>
                             <small>5k<br>(3.1 Miles)</small>
                         </div>
                         <div class="col">
-                            <strong><%= @run.mile_time %></strong><br>
+                            <strong><%= @run.half_marathon_time %></strong><br>
                             <small>Half-Mar.<br>(13.1 Miles)</small>
                         </div>
                         <div class="col">
-                            <strong><%= @run.mile_time %></strong><br>
+                            <strong><%= @run.marathon_time %></strong><br>
                             <small>Marathon<br>(26.2 Miles)</small>
                         </div>
                     </div>    
