--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -60,7 +60,7 @@
         </div>
         </div>
         <div class="row justify-content-center">
-        <a href="/runs/<%= @run.id %>" class="btn btn-success btn-sm m-2">Edit</a>
+        <a href="/runs/<%= @run.id %>/edit" class="btn btn-success btn-sm m-2">Edit</a>
         <form action="/runs/<%= @run.id %>/delete" method="post">
             <input type="hidden" name="_method" value="delete">
             <input type="submit" class="btn btn-danger btn-sm m-2" value="Delete">
