--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,24 +1,31 @@
-<h1>This is the Model's index page.</h1>
-
-<% @runs.each do |run| %>
-<div class="card" style="width: 21rem;">
-    <div class="card-header <%= run.pace.downcase %>">
-        <img src="/images/<%= run.pace.downcase %>.png"> <%= run.pace %>
-        <span class="float-right"><%= Time.at(run.date).strftime('%m/%d/%Y') %></span>
-    </div>
-    <div class="card-body text-center">
-        <div class="row">
-        <div class="col">
-            <strong><%= Time.at(run.duration.to_i).utc.strftime('%H:%M:%S') %></strong><br>
-            <small>Duration</small>
-        </div>
-        <div class="col">
-            <strong><%= run.distance %></strong><br>
-            <small>Miles</small>
-        </div>
+<div class="row justify-content-center">
+    <div class="col-md-5">
+        <div class="card mb-3 sticky-top">
+            TEST CARD
         </div>
     </div>
-<a href="/runs/<%= run.id %>" class="stretched-link"></a>
+    <div class="col-md-4 order-2 order-md-first">
+        <% @runs.each do |run| %>
+            <div class="card mx-auto">
+                <div class="card-header <%= run.pace.downcase %>">
+                    <img src="/images/<%= run.pace.downcase %>.png"> <%= run.pace %>
+                    <span class="float-right"><%= Time.at(run.date).strftime('%m/%d/%Y') %></span>
+                </div>
+                <div class="card-body text-center">
+                    <div class="row">
+                        <div class="col">
+                            <strong><%= Time.at(run.duration.to_i).utc.strftime('%H:%M:%S') %></strong><br>
+                            <small>Duration</small>
+                        </div>
+                        <div class="col">
+                            <strong><%= run.distance %></strong><br>
+                            <small>Miles</small>
+                        </div>
+                    </div>
+                </div>
+            <a href="/runs/<%= run.id %>" class="stretched-link"></a>
+            </div>
+        <% end %>
+    </div>
 </div>
 
-<% end %>
