--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,7 +1,9 @@
 <div class="row justify-content-center">
-    <div class="col-md-5">
+    <div class="col-md-5 text-center">
         <div class="card mb-3 sticky-top">
-            TEST CARD
+            <div class="row">
+                <h5 class="card-title"> <%= current_user.username %> </h5>
+            </div>
         </div>
     </div>
     <div class="col-md-4 order-2 order-md-first">
