Added 'Add Run' & 'Log Out' Links to Sidebar

--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -25,6 +25,14 @@
                     Ints
                 </div>
             </div>
+            <div class="row justify-content-center mx-0 my-2">
+                <div class="col-4">
+                    <small><a href="/runs/new" class="text-success">Add Run</a></small>
+                </div>
+                <div class="col-4">
+                    <small><a href="/users/logout" class="text-danger">Log Out</a></small>
+                </div>
+            </div>
         </div>
     </div>
     <div class="col-md-4 order-2 order-md-first">
