Changed Navbar Link Text

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,10 +27,10 @@
                   </li>
                 <% else %>
                   <li class="nav-item">
-                    <a class="nav-link" href="/runs">Logged Runs</a>
+                    <a class="nav-link" href="/runs">Run Log</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/runs/new">Add New Run</a>
+                    <a class="nav-link" href="/runs/new">Add Run</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/users/logout">Log Out</a>
