--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col">
           <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="margin-top: 20px; border-radius: 0.3rem;">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/runs">
               <img src="/images/brand.png" alt="RunLogger">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
