Changed Card Header Text

--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class="card mx-auto text-center bg-dark text-white" style="max-width: 21rem;">
     <div class="card-header">
-        Add A Run
+        Add Run
     </div>
     <div class="card-body">
         <form method="POST" action="/runs" style="width: 18rem;">
