--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -75,7 +75,7 @@
     </div>
     <div class="form-group">
         <a href="/runs/<%= @run.id %>" class="btn btn-danger">Cancel</a>
-        <input type="submit" class="btn btn-success" value="Add">
+        <input type="submit" class="btn btn-success" value="Confirm">
     </div>
 </form>
 </div>
