--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -2,12 +2,12 @@
 <div class="card w-75">
     <div class="card-header <%= @run.pace.downcase %>">
         <img src="/images/<%= @run.pace.downcase %>.png"> <%= @run.pace %>
-        <span class="float-right"><%= Time.at(@run.date).strftime('%m/%d/%Y') %></span>
+        <span class="float-right"><%= @run.display_date %></span>
     </div>
     <div class="card-body text-center">
         <div class="row justify-content-center">
         <div class="col-lg-3">
-            <h2><%= Time.at(@run.duration.to_i).utc.strftime('%H:%M:%S') %></h2>
+            <h2><%= @run.display_time(@run.duration) %></h2>
             DURATION
         </div>
         <div class="col-lg-3">
