--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -9,19 +9,19 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h4 class="mb-0"><%= @runs.where(:pace => "Run").count %></h2>
+                    <h4 class="mb-0"><%= @run_count %></h2>
                     Runs
                 </div>
                 <div class="col">
-                    <h4 class="mb-0"><%= @runs.where(:pace => "Jog").count %></h2>
+                    <h4 class="mb-0"><%= @jog_count %></h2>
                     Jogs
                 </div>
                 <div class="col">
-                    <h4 class="mb-0"><%= @runs.where(:pace => "Walk").count %></h2>
+                    <h4 class="mb-0"><%= @walk_count %></h2>
                     Walks
                 </div>
                 <div class="col">
-                    <h4 class="mb-0"><%= @runs.where(:pace => "Intervals").count %></h2>
+                    <h4 class="mb-0"><%= @int_count %></h2>
                     Ints
                 </div>
             </div>
