--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,23 +1,21 @@
-<div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
-
-    <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+<div class="card mx-auto text-center bg-dark text-white" style="max-width: 21rem;">
+    <div class="card-header">
+        Log In
     </div>
-
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
+    <div class="card-body">
+        <form method="POST" action ="/users/login">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control text-center" name="username" id="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control text-center" name="password" id="password">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-success" value="Log In">
+            </div>
+            <small>Don't have an account? <a href="/users/new">Sign Up</a></small>
+        </form>
     </div>
-
-  </div>
 </div>
