Added welcome message to login card

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,9 +1,12 @@
+
 <div class="card mx-auto text-center bg-dark text-white" style="max-width: 21rem;">
     <div class="card-header">
-        Log In
+        Welcome to RunLogger
     </div>
     <div class="card-body">
-        <form method="POST" action ="/users/login">
+      The best place to log all your runs.<br><br>
+      Please log in to continue<br><br>
+      <form method="POST" action ="/users/login">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control text-center" name="username" id="username">
@@ -16,6 +19,7 @@
                 <input type="submit" class="btn btn-success" value="Log In">
             </div>
             <small>Don't have an account? <a href="/users/new">Sign Up</a></small>
-        </form>
+      </form>
     </div>
 </div>
+
